[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/entities/Asteroid/Asteroid.gd" type="Script" id=1]
[ext_resource path="res://assets/sounds/sfx/387858__runningmind__explosion-asteroid.wav" type="AudioStream" id=2]
[ext_resource path="res://assets/sprites/test squares size in pixel.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[node name="Asteroid" type="Area2D" groups=["asteroid"]]
collision_layer = 4
collision_mask = 2
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
rect = Rect2( -8, -24, 16, 16 )

[node name="SoundImpact" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 16, 40, 8, 8 )

[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="finished" from="SoundImpact" to="." method="_on_SoundImpact_finished"]
